--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,6 +28,12 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<!-- Added for jitsi_meet_flutter_sdk package -->
+	<key>NSCameraUsageDescription</key>
+	<string>The app needs access to your camera for meetings.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>The app needs access to your microphone for meetings.</string>
+	<!-- ends here -->
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
